--- a/Mobile.html
+++ b/Mobile.html
@@ -343,6 +343,52 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+
+        /* Lightbox */
+        .lightbox {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 2000;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
+        }
+
+        .lightbox.active {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .lightbox-img {
+            max-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: white;
+            font-size: 30px;
+            cursor: pointer;
+            background: rgba(255, 255, 255, 0.1);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 
@@ -395,10 +441,27 @@
     <!-- Refresh Button -->
     <button class="refresh-btn" id="refreshBtn" onclick="loadData()">↻</button>
 
+    <!-- Lightbox Overlay -->
+    <div class="lightbox" id="lightbox" onclick="closeLightbox()">
+        <span class="lightbox-close">&times;</span>
+        <img src="" alt="Full Screen Image" class="lightbox-img" id="lightboxImg">
+    </div>
+
     <!-- JS Dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
+        // Lightbox Functions
+        function openLightbox(url) {
+            const lightbox = document.getElementById('lightbox');
+            const img = document.getElementById('lightboxImg');
+            img.src = url;
+            lightbox.classList.add('active');
+        }
+
+        function closeLightbox() {
+            document.getElementById('lightbox').classList.remove('active');
+        }
         let allData = [];
         let currentUser = null;
 
@@ -514,6 +577,15 @@
                         <div class="card-keluhan">
                             <strong>Keluhan:</strong> ${item.keluhan}
                         </div>
+
+                        ${item.gambar ? `
+                        <div class="mb-2">
+                             <img src="${item.gambar}" alt="Foto Kerusakan" style="width: 100%; height: 200px; object-fit: cover; border-radius: 12px; cursor: pointer; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" onclick="openLightbox('${item.gambar}')">
+                             <div style="font-size: 11px; color: #6c757d; margin-top: 6px; text-align: center; font-style: italic;">
+                                <i class="bi bi-zoom-in"></i> Ketuk gambar untuk memperbesar
+                             </div>
+                        </div>
+                        ` : ''}
                         
                         <div class="card-footer">
                             <span class="status-badge ${statusClass}">${item.status}</span>
