--- a/MobileAdmin.html
+++ b/MobileAdmin.html
@@ -302,10 +302,10 @@
                             </div>
                             <select id="statusFilter"
                                 class="block w-full sm:w-40 pl-3 pr-10 py-2 border border-slate-300 dark:border-slate-600 rounded-lg leading-5 bg-white dark:bg-slate-800 text-slate-900 dark:text-white focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary sm:text-sm">
-                                <option value="">Semua Status</option>
-                                <option value="Waiting">Waiting</option>
+                                <option value="Waiting" selected>Waiting</option>
                                 <option value="On Process">On Process</option>
                                 <option value="Done">Done</option>
+                                <option value="">Semua Status</option>
                             </select>
                             <button onclick="loadData()"
                                 class="flex items-center justify-center p-2 rounded-lg bg-slate-100 hover:bg-slate-200 dark:bg-slate-700 dark:hover:bg-slate-600 transition-colors text-slate-600 dark:text-slate-300">
@@ -450,6 +450,8 @@
             }
             emptyState.classList.add('hidden');
 
+            const now = new Date();
+
             tbody.innerHTML = data.map(item => {
                 const statusClass = item.status === 'Waiting' ? 'bg-yellow-100 text-yellow-800 dark:bg-yellow-900/30 dark:text-yellow-300' :
                     item.status === 'On Process' ? 'bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-300' :
@@ -466,6 +468,33 @@
                     }
                 }
 
+                // Response Time Check
+                let warningHtml = '';
+                if (item.status === 'Waiting' && item.tanggal) {
+                    // item.tanggal format example: 2026-02-04 18:00
+                    // We need to parse this manually to cross-browser safe Date
+                    // Format: yyyy-MM-dd HH:mm
+                    const dateParts = item.tanggal.split(' ');
+                    if (dateParts.length === 2) {
+                        const dateStr = dateParts[0] + 'T' + dateParts[1] + ':00'; // Append seconds for ISO format
+                        const reportTime = new Date(dateStr);
+                        if (!isNaN(reportTime.getTime())) {
+                            const diffMs = now - reportTime;
+                            const diffMins = Math.floor(diffMs / 60000);
+
+                            // Warning if more than 15 minutes
+                            if (diffMins > 15) {
+                                warningHtml = `
+                                    <div class="mt-2 text-xs text-red-600 dark:text-red-400 font-bold flex items-center gap-1 bg-red-50 dark:bg-red-900/20 p-1.5 rounded animate-pulse border border-red-200 dark:border-red-800">
+                                        <span class="material-symbols-outlined text-[16px]">warning</span>
+                                        Late Response (${diffMins} min)
+                                    </div>
+                                `;
+                            }
+                        }
+                    }
+                }
+
                 // Photo
                 let photoHtml = '';
                 if (item.gambar) {
@@ -479,6 +508,7 @@
                     <td class="px-6 py-4 whitespace-nowrap align-top">
                         <div class="text-sm font-bold text-primary">#${item.laporanId}</div>
                         <div class="text-xs text-slate-500 dark:text-slate-400 mt-1">${item.tanggal || '-'}</div>
+                        ${warningHtml}
                     </td>
                     <td class="px-6 py-4 align-top">
                         <div class="flex items-start">
